fixed background so if your inventory list is too long it doesn't scroll passed it into nothing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,9 @@
 }
 
 body {
-  background: url('./img/warehouse.jpg') no-repeat center center/cover;
+  background: url('./img/warehouse.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
   height: 100vh;
 }
